remove window scrollbar, fix #30

--- a/src/style/style.css
+++ b/src/style/style.css
@@ -337,6 +337,7 @@ textarea {
 
 body {
   height: 100vh;
+  overflow: hidden;
 }
 
 svg.slash {
